--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.28.0",
+    "@stylexjs/stylex": "^0.5.1",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "prettier": "^3.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@babel/core": "^7.24.3",
+    "@stylexjs/nextjs-plugin": "^0.5.1",
+    "@tanstack/eslint-plugin-query": "^5.28.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "typescript": "^5"
   }
 }
