--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/core": "^0.28.0",
     "@stylexjs/stylex": "^0.5.1",
+    "@tanstack/react-query": "^5.28.8",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "prettier": "^3.2.5",
@@ -21,6 +22,7 @@
     "@babel/core": "^7.24.3",
     "@stylexjs/nextjs-plugin": "^0.5.1",
     "@tanstack/eslint-plugin-query": "^5.28.6",
+    "@tanstack/react-query-devtools": "^5.28.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
