--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@auth/core": "^0.28.0",
     "@stylexjs/stylex": "^0.5.1",
     "@tanstack/react-query": "^5.28.8",
-    "next": "14.1.4",
+    "next": "^14",
     "next-auth": "^4.24.7",
     "prettier": "^3.2.5",
     "react": "^18",
